# Delta-vault

./: .gitignore  Anchor.toml  LIVE_TEST_CHECKLIST.md  PRESET_GUIDE.md  README.md  TWO_SIDED_DELTA_NEUTRAL_IMPLEMENTATION.md  package-lock.json
.githooks/: pre-commit
bot/: .env.example  gen-keypair.js  package-lock.json  package.json  test-rpc.ts  tsconfig.json
bot/configs/: presets.d.ts  presets.js  presets.js.map
bot/src/: anchorClient.ts  enhancedRiskEngine.ts  executionEngine.ts  feeCalculator.ts  index.ts  jupiterSwap.ts  liquidityGuard.ts  liveExecution.ts  logger.ts  logging.ts  onChainSync.ts  presets.ts  realMarketData.ts  riskEngine.ts  spotHedge.ts  strategyEngine.ts  telegramAlerts.ts  walletIntegration.ts
bot/src/.ipynb_checkpoints/: index-checkpoint.ts
bot/src/agent/: agent.ts  decision.ts  logger.ts  sizing.ts  state.ts
bot/src/config/: crossChain.ts  tokenConfig.ts
bot/src/idl/: README.md  delta_vault.json
bot/src/services/: bybitExecution.ts  cexFundingRates.ts  costModel.ts  crossChainFunding.ts  fundingPersistence.ts  fundingRateScanner.ts  fundingRegime.ts  fundingSettlementTimer.ts  hyperliquidExecution.ts  jupiterSpot.ts  kaminoLending.ts  (+2 more)
bot/tests/: unit.test.ts
dashboard/: package-lock.json  package.json  tsconfig.json  vitest.config.js
dashboard/src/: App.jsx
docs/: AUDIT_NOTES.md  DEMO_CHECKLIST.md  strategy.md
frontend/: delta-neutral-bot.jsx  delta-vault-presentation.jsx
programs/delta_vault/: Cargo.toml
programs/delta_vault/src/: fees.rs  lib.rs  risk.rs  strategy.rs  vault.rs
scripts/: setup-devnet.js
(+37 files in other folders)
